# xrepo-cmake

./: .gitignore  CONTRIBUTING.md  README.md  xrepo.cmake
.github/workflows/: linux.yml  macos.yml  windows.yml
example/: CMakeLists.txt
example/src/: main.cpp
scripts/: test-unix.sh
